--- a/app/views/follow_requests/_follow_unfollow.html.erb
+++ b/app/views/follow_requests/_follow_unfollow.html.erb
@@ -2,15 +2,17 @@
   <% follow_request = current_user.sent_follow_requests.find_by(recipient: recipient) %>
 
   <% if follow_request %>
-    <% if follow_request.pending? %>
-      <%= link_to follow_request,  data: { turbo_method: :delete }, class: "btn btn-outline-secondary" do %>
-        Un-request
+    <div id="<%=dom_id(current_user)%>_follow_request_delete">
+      <% if follow_request.pending? %>
+        <%= link_to follow_request,  method: :delete, class: "btn btn-outline-secondary", remote: true do %>
+          Un-request
+        <% end %>
+      <% elsif follow_request.accepted? %>
+        <%= link_to follow_request,  method: :delete, class: "btn btn-outline-secondary", remote: true do %>
+          Un-follow
+        <% end %>
       <% end %>
-    <% elsif follow_request.accepted? %>
-      <%= link_to follow_request,  data: { turbo_method: :delete }, class: "btn btn-outline-secondary" do %>
-        Un-follow
-      <% end %>
-    <% end %>
+    </div>
   <% else %>
     <%= render "follow_requests/form", follow_request: recipient.received_follow_requests.build %>
   <% end %>
