--- a/app/views/follow_requests/create.js.erb
+++ b/app/views/follow_requests/create.js.erb
@@ -1,1 +1,4 @@
-$("#<%= dom_id(current_user) %>_follow_request_form").replaceWith($("<%= j(render 'follow_requests/follow_unfollow', sender: current_user, recipient: @follow_request.recipient) %>"))
+var follow_button = $("#<%= dom_id(current_user) %>_follow_request_form");
+var unfollow_button = $("<%= j(render 'follow_requests/follow_unfollow', sender: current_user, recipient: @follow_request.recipient) %>");
+
+follow_button.replaceWith(unfollow_button);
