--- a/app/views/follow_requests/destroy.js.erb
+++ b/app/views/follow_requests/destroy.js.erb
@@ -1,1 +1,4 @@
-$("#<%= dom_id(current_user) %>_follow_request_delete").replaceWith($("<%= j(render 'follow_requests/follow_unfollow', sender: current_user, recipient: @recipient) %>"))
+var unfollow_button = $("#<%= dom_id(current_user) %>_follow_request_delete");
+var follow_button = $("<%= j(render 'follow_requests/follow_unfollow', sender: current_user, recipient: @recipient) %>");
+
+unfollow_button.replaceWith(follow_button);
