--- a/app/views/likes/create.js.erb
+++ b/app/views/likes/create.js.erb
@@ -1,1 +1,4 @@
-$("#<%= dom_id(@like.photo) %>_likes").replaceWith($("<%= j(render 'photos/likes', photo: @like.photo)%>"));
+var like_button = $("#<%= dom_id(@like.photo) %>_likes")
+var unlike_button = $("<%= j(render 'photos/likes', photo: @like.photo)%>")
+
+like_button.replaceWith(unlike_button);
