--- a/app/views/follow_requests/_follow_unfollow.html.erb
+++ b/app/views/follow_requests/_follow_unfollow.html.erb
@@ -1,19 +1,21 @@
-<% unless sender == recipient %>
-  <% follow_request = current_user.sent_follow_requests.find_by(recipient: recipient) %>
+<div class="<%= dom_id(sender) %>_follow_request_to_<%= dom_id(recipient) %>_form">
 
-  <% if follow_request %>
-    <div id="<%=dom_id(current_user)%>_follow_request_delete">
-      <% if follow_request.pending? %>
-        <%= link_to follow_request,  method: :delete, class: "btn btn-outline-secondary", remote: true do %>
-          Un-request
+  <% unless sender == recipient %>
+    <% follow_request = current_user.sent_follow_requests.find_by(recipient: recipient) %>
+
+    <% if follow_request %>
+        <% if follow_request.pending? %>
+          <%= link_to follow_request,  method: :delete, class: "btn btn-outline-secondary", remote: true do %>
+            Un-request
+          <% end %>
+        <% elsif follow_request.accepted? %>
+          <%= link_to follow_request,  method: :delete, class: "btn btn-outline-secondary", remote: true do %>
+            Un-follow
+          <% end %>
         <% end %>
-      <% elsif follow_request.accepted? %>
-        <%= link_to follow_request,  method: :delete, class: "btn btn-outline-secondary", remote: true do %>
-          Un-follow
-        <% end %>
-      <% end %>
-    </div>
-  <% else %>
-    <%= render "follow_requests/form", follow_request: recipient.received_follow_requests.build %>
+      </div>
+    <% else %>
+      <%= render "follow_requests/form", follow_request: recipient.received_follow_requests.build %>
+    <% end %>
   <% end %>
-<% end %>
+</div>
